# Aliengo_A1_deploy

./: .gitignore  check_gravity.py  env.py  live_plot_client.py  play.py  pub_command.py  vr.py
arm/: README.md
arm/A1_SDK-arm/install/share/URDF_R1_V1_0_4/config/: joint_names_URDF_R1_V1_0_4.yaml
arm/A1_SDK-arm/install/share/URDF_R1_V1_0_4/urdf/: URDF_R1_V1_0_4.urdf
arm/A1_SDK-arm/install/share/mobiman/urdf/A1/: CMakeLists.txt  package.xml
arm/A1_SDK-arm/install/share/mobiman/urdf/A1/config/: joint_names_A1_URDF_0607_0028.yaml
arm/A1_SDK-arm/install/share/mobiman/urdf/A1/launch/: display_A1.launch  display_A1_no_gripper.launch  gazebo_A1.launch
arm/A1_SDK-arm/install/share/mobiman/urdf/A1/urdf/: A1_URDF_0607_0028.urdf  A1_URDF_0607_0028_no_gripper.urdf
arm/A1_SDK-arm/install/share/mobiman/urdf/R1/: CMakeLists.txt  package.xml
arm/A1_SDK-arm/install/share/mobiman/urdf/R1/launch/: display_r1.launch  gazebo_r1.launch
arm/a1deploy/: a1_interface.py  a1_new.py  command_manager.py  live_plot_server.py  pathgen.py  play.py  s2r.py  test.py
unitree_legged_sdk/: .gitignore  CMakeLists.txt  data.pkl  env.py  play_force_lqz.py
unitree_legged_sdk/aliengo_py/: aliengo_py.pyi
unitree_legged_sdk/example_py/: example_position.py  example_stand.py
unitree_legged_sdk/examples/: example_position_aliengo.cpp
unitree_legged_sdk/examples/python_wrapper/: CMakeLists.txt  aliengo_py.cpp
vrlib/oculus_reader/: reader.py
